Wed Jan 24 18:48:38 1996  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* Makefile.in: Remove spurious @DEFS@

Wed Dec 13 03:44:58 1995  Chris Provenzano (proven@mit.edu)

        * dump.c, dumpv4.c, kdb5_edit.c, loadv4.c : 
		Remove mkvno from krb5_db_entry.

Sun Dec 10 11:07:51 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kdb5_edit.M: Document that modent exists

	* kdb5_edit.c (modent): Add usage as suggested by jhawk@mit.edu.

Thu Nov 09 17:05:57 1995  Chris Provenzano (proven@mit.edu)

        * kdb5_edit.c : Remove krb5_enctype from krb5_string_to_key() args.

Fri Oct 27 13:37:04 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* dump.c (process_k5_record): Fix off by one in malloc.

Mon Oct  9 16:35:19 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kdb5_edit.c (extract_v4_srvtab): Extract a one byte version
		number for v4 srvtabs (from warlord).

Thu Oct  5 10:35:35 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* cpw.c: Declare std_ks_tuple as extern.
	* kdb5_edit.h: Remove std_ks_tuple declaration as not all sources
		include adm.h for structures

Tue Oct  3 23:10:57 1995  Theodore Y. Ts'o  <tytso@dcl>

	* cpw.c (enter_rnd_key, enter_pwd_key):
	* kdb5_edit.c (kdb5_edit_Init): Use the kdc.conf file to determine
		the default list of keysalt tuples to be used.  This is
		stored in std_ks_tuple, and is used by cpw.c for random
		keys and when a list of keysalts is not specified.

Mon Sep 18 03:59:47 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kdb5_edit.c (show_principal): Show key version and last password
		change. 

	* cpw.c: Fix typo in below change in which list was terminated
		after third entry. (extra } removed)

Fri Sep 15 14:21:25 1995  Theodore Y. Ts'o  <tytso@dcl>

	* cpw.c: Add DES_CBC_MD5 and DES_CBC_CRC with the V4 salt as
		default key/salt tuples to be added.  (Once proven's DES_*
		folding code is implemented, we can shorten this list.)
		Eventually, this list should be read in from kdc.conf.
